Lookup & Render & Embed Individual Tweets

--- a/tweetme2-web/public/index.html
+++ b/tweetme2-web/public/index.html
@@ -29,6 +29,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div class='tweetme-2-detail' data-tweet-id='12' data-class-name="col-6 mx-auto"></div>
+    <div class='tweetme-2-detail' data-tweet-id='13' data-class-name="col-6 mx-auto"></div>
+    <div class='tweetme-2-detail' data-tweet-id='14' data-class-name="col-6 mx-auto"></div>
+    <div class='tweetme-2-detail' data-tweet-id='15' data-class-name="col-6 mx-auto"></div>
+    <div class='tweetme-2-detail' data-tweet-id='16' data-class-name="col-6 mx-auto"></div>
     <div id="tweetme-2" data-username="DarishkaAMS" data-can-tweet="false"></div>
     <!--
       This HTML file is a template.
