--- a/tweetme2-web/public/index.html
+++ b/tweetme2-web/public/index.html
@@ -29,11 +29,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class='tweetme-2-detail' data-tweet-id='12' data-class-name="col-6 mx-auto"></div>
-    <div class='tweetme-2-detail' data-tweet-id='13' data-class-name="col-6 mx-auto"></div>
-    <div class='tweetme-2-detail' data-tweet-id='14' data-class-name="col-6 mx-auto"></div>
-    <div class='tweetme-2-detail' data-tweet-id='15' data-class-name="col-6 mx-auto"></div>
-    <div class='tweetme-2-detail' data-tweet-id='16' data-class-name="col-6 mx-auto"></div>
+    <div id='tweet-container'> </div>
     <div id="tweetme-2" data-username="DarishkaAMS" data-can-tweet="false"></div>
     <!--
       This HTML file is a template.
@@ -45,5 +41,16 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+      <script>
+          var path = window.location.pathname
+          if (path !== "/"){
+            var tweetme2El = document.getElementById("tweetme-2")
+            tweetme2El.className = 'd-none'
+            var tweetId = 12
+            var tweetEl = "<div class='tweetme-2-detail' data-tweet-id=" + tweetId + "></div>"
+            var mainContainer = document.getElementById("tweet-container")
+            mainContainer.innerHTML = tweetEl
+          }
+      </script>
   </body>
 </html>
