--- a/tweetme2-web/public/index.html
+++ b/tweetme2-web/public/index.html
@@ -45,8 +45,9 @@
           var path = window.location.pathname
           var idRegex = /(?<tweetid>\d+)/
           var match = path.match(idRegex)
-          var tweetId = match.groups.tweetid
-          if (tweetId){
+
+          if (match){
+            var tweetId = match.groups.tweetid
             var tweetme2El = document.getElementById("tweetme-2")
             tweetme2El.className = 'd-none'
             var tweetEl = "<div class='tweetme-2-detail' data-tweet-id=" + tweetId + "></div>"
