--- a/tweetme2-web/public/index.html
+++ b/tweetme2-web/public/index.html
@@ -43,12 +43,16 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script>
-      var tweetId = 12
-      var tweetEl = "<div class='tweetme-2-detail' data-tweet-id=" + tweetId + " data-class-name='col-6 mx-auto'></div>"
-      var mainContainer = document.getElementById("tweet-container")
-      mainContainer.innerHTML = tweetEl
+      var path = window.location.pathname
+      if (path !== '/') {
+        var tweetme2El = document.getElementById("tweetme-2")
+        tweetme2El.className = 'd-none'
+        var tweetId = 12
+        var tweetEl = "<div class='tweetme-2-detail' data-tweet-id=" + tweetId + " data-class-name='col-6 mx-auto'></div>"
+        var mainContainer = document.getElementById("tweet-container")
+        mainContainer.innerHTML = tweetEl
+      }
     </script>
   </body>
-  <p>TEST COMPLETED</p>
 </html>
 
